px4_ws/logs/px4_offboard/build.make.169.log
[  0%] [  0%] [  0%] [  0%] [  0%] Built target std_msgs_generate_messages_lisp
Built target geometry_msgs_generate_messages_lisp
Built target _catkin_empty_exported_target
Built target diagnostic_msgs_generate_messages_lisp
Built target diagnostic_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target _px4_offboard_generate_messages_check_deps_JoyCommand
[  0%] Built target _px4_offboard_generate_messages_check_deps_CtrlState
[  0%] [  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target nav_msgs_generate_messages_py
[  0%] Built target diagnostic_msgs_generate_messages_py
[  0%] Built target mavros_msgs_generate_messages_py
Built target nav_msgs_generate_messages_lisp
[  0%] Built target sensor_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_cpp
[  0%] [  0%] Built target nav_msgs_generate_messages_cpp
[  0%] [  0%] [  0%] Built target geometry_msgs_generate_messages_py
Built target roscpp_generate_messages_cpp
Built target roscpp_generate_messages_py
Built target rosgraph_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] [  0%] Built target std_msgs_generate_messages_py
Built target sensor_msgs_generate_messages_cpp
[  0%] [  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target mavros_msgs_generate_messages_cpp
[  0%] [  0%] Built target sensor_msgs_generate_messages_lisp
Built target actionlib_msgs_generate_messages_lisp
Built target actionlib_generate_messages_cpp
[  0%] Built target actionlib_msgs_generate_messages_py
[  0%] [  0%] Built target actionlib_generate_messages_lisp
Built target mavros_msgs_generate_messages_lisp
[  0%] Built target tf2_msgs_generate_messages_py
[  0%] [  0%] [  0%] [ 25%] Built target tf2_msgs_generate_messages_lisp
Built target actionlib_generate_messages_py
Built target px4_offboard_generate_messages_py
Built target tf2_msgs_generate_messages_cpp
[ 41%] Built target px4_offboard_generate_messages_lisp
[ 58%] Built target px4_offboard_generate_messages_cpp
[ 66%] Built target teleop
[35m[1mScanning dependencies of target SLAM
[ 75%] Built target checker
[ 83%] Built target mission
[ 83%] Built target px4_offboard_generate_messages
[ 91%] [0mBuilt target apriltag
[100%] [32mBuilding CXX object CMakeFiles/SLAM.dir/src/SLAM.cpp.o
In file included from /home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/SLAM.cpp:3:0:
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp: In constructor 'CtrlPx4::CtrlPx4()':
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp:18:28: error: 'cali_' was not declared in this scope
   nh_.getParam("/fcu/ctrl",cali_);
                            ^
make[2]: *** [CMakeFiles/SLAM.dir/src/SLAM.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
